--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 </head>
 <body>
 <div class="wrapper">
-
+<section class="information">
+    <h2>Om EduTechSmart</h2>
+    <p> EduTechSmart är en modern och pålitlig plattform som hjälper kommuner,
+    vårdbolag och organisationer att skapa digitala lösningar. Vi fokuserar på
+    tillgänglighet, användarvänlighet och innovation.
+  </p>
+</section>
 </div>
 
 <script src="assets/scripts/script.js"></script>
