added content to contact-us

--- a/index.html
+++ b/index.html
@@ -10,12 +10,29 @@
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">http://127.0.0.1:3000/index.html?serverWindowId=f5ab5c58-8ff1-47ce-a8d7-b65a67995bde
 </head>
 <body>
 <div class="wrapper">
 
 </div>
+<!-- Olivia START -->
+<div class="wrapper">
+    <img src="assets/images/caretaker_and_eldery.png" class="img-contact" alt="Picture of an eldery and a caretaker"/>
+
+    <p class="p-contact p-contact2"><span class="p-slash">/</span> WANT TO KNOW MORE?</p>
+    <h2 class="sub-headlines">Contact us!</h2>
+    <p class="p-contact"><a href="#" class="a-contact">LET'S TALK &#8594</a></p>
+
+        <div class="icon-wrapper">
+            <a href="https://www.facebook.com/profile.php?id=61580692061358" target="_blank"><img src="assets/icon/facebook_icon.png" class="icon-contact"/></a>
+            <a href="https://www.linkedin.com/company/edutechsmart/?originalSubdomain=se" target="_blank"><img src="assets/icon/linkedin_icon.png" class="icon-contact"/></a>
+            <a href="https://www.youtube.com/@EduTechSmart" target="_blank"><img src="assets/icon/youtube_icon.png" class="icon-contact"/></a>
+            <a href="https://www.instagram.com/edutechsmart/" target="_blank"><img src="assets/icon/instagram_icon.png" class="icon-contact"/></a>
+        </div>
+</div>
+
+<!-- Olivia END -->
 
 <script src="assets/scripts/script.js"></script>
 </body>
