--- a/index.html
+++ b/index.html
@@ -6,15 +6,61 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Document</title>
     <style>
+        h1{
+            /*color: black;*/
+        }
+        .highlighted {
+            background: #F62584;
+            background: linear-gradient(to right, #F62584 23%, #3A0CA2 68%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
 
+        .featured-image {
+
+        }
+
+        .featured-background {
+            background: #3F5EFB;
+            background: radial-gradient(circle,rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
+        }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="wrapper">
 
+<div class="mob-nav">
+    <div>
+        <a class="dots">
+            <img src="assets/images/contact-popup.png" width="30px">
+        </a>
+    </div>
+    <div>
+        <img src="assets/images/logo-mobile.png" height="50px">
+    </div>
+    <div>
+        <img src="assets/images/menu.png" height="30px">
+        <nav>
+            <a></a>
+        </nav>
+    </div>
+</div>
+<div class="wrapper featured-background">
+    <div>
+        <h1>Gamified education for <span class="highlighted"> any organisation</span></h1>
+        <img src="assets/images/gamify.jpg" width="300px" class="featured-image">
+    </div>
+
+</div>
+
+<div class="wrapper">
+    <h1>hello</h1>
+</div>
+
+<div class="wrapper">
+    <h1>hello</h1>
 </div>
 
 <script src="assets/scripts/script.js"></script>
