mobile menu and hero

--- a/index.html
+++ b/index.html
@@ -5,26 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Document</title>
-    <style>
-        h1{
-            /*color: black;*/
-        }
-        .highlighted {
-            background: #F62584;
-            background: linear-gradient(to right, #F62584 23%, #3A0CA2 68%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-
-        .featured-image {
-
-        }
-
-        .featured-background {
-            background: #3F5EFB;
-            background: radial-gradient(circle,rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
-        }
-    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -41,16 +21,44 @@
         <img src="assets/images/logo-mobile.png" height="50px">
     </div>
     <div>
-        <img src="assets/images/menu.png" height="30px">
-        <nav>
-            <a></a>
-        </nav>
+        <div class="burger-container">
+            <button class="burger-icon" id="burgerBtn" aria-label="Toggle menu">
+                <img src="assets/images/menu.png" height="30px">
+            </button>
+        </div>
+
+        <div class="overlay" id="overlay">
+            <button class="close-btn" id="closeBtn" aria-label="Close menu">&times;</button>
+            <nav class="overlay-content">
+                <a href="#"> Home
+                </a>
+                <a href="#"> About
+                </a>
+                <a href="#">Our Tech
+                </a>
+                <a href="#">Education-Portal
+                </a>
+                <a href="#">News
+                </a>
+                <a href="#">Contact Us</a>
+
+            </nav>
+        </div>
+
+
     </div>
 </div>
 <div class="wrapper featured-background">
     <div>
         <h1>Gamified education for <span class="highlighted"> any organisation</span></h1>
-        <img src="assets/images/gamify.jpg" width="300px" class="featured-image">
+        <div class="header-text">
+            <p>
+                EduTechSmart provides Gamified Healthcare Education for companies in personal assistance, home services, senior housing and LSS accommodations.
+            </p>
+            <img src="assets/images/gamify.jpg"  class="featured-image">
+        </div>
+
+
     </div>
 
 </div>
