--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">http://127.0.0.1:3000/index.html?serverWindowId=f5ab5c58-8ff1-47ce-a8d7-b65a67995bde
+    <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
 <div class="mob-nav">
     <div>
         <a class="dots">
