--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   
 <!-- Dropdown starts here -->
 
-  <div class="wrapper">
+  <div class="wrapper accordion">
     <div class="dropdown">
         <button class="dropbtn">
         <span>No Classroom Needed</span>
