fixed error messages in the html and css files

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <li>Repeatable modules</li>
             <li>24/7 accesibility</li>
             <li>Senior based</li>
-            <li>Localized in >20 languages</li>
+            <li>Localized in 20 languages</li>
             <li>Customizable characters and environments</li>
             <li>Seamless access on PC/MAC, mobile, or tablet</li>
             <li>Content not found in typical online courses</li>
@@ -127,8 +127,6 @@
 
     </div>
   </div>
-
-<div class="wrapper">
 
 <!-- Testimonaisla starts here -->
     
