--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     </div>
 </div>
-<div class="wrapper featured-background">
+<div class="headwrapper featured-background">
     <div>
         <h1>Gamified education for <span class="highlighted"> any organisation</span></h1>
         <div class="header-text">
