changes the footer, to bind things together... sort of

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
 <div class="mob-nav">
-    <div>
+    <!-- <div>
         <a class="dots">
             <img src="assets/images/contact-popup.png" width="30px">
         </a>
-    </div>
+    </div> -->
     <div>
         <img src="assets/images/logo-mobile.png" height="50px">
     </div>
@@ -200,7 +200,7 @@
 
     <p class="p-contact p-contact2"><span class="p-slash">/</span> WANT TO KNOW MORE?</p>
     <h2 class="sub-headlines">Contact us!</h2>
-    <p class="p-contact"><a href="#" class="a-contact">LET'S TALK &#8594</a></p>
+    <p class="a-contact">LET'S TALK &#8594</p>
 
         <div class="icon-wrapper">
             <a href="https://www.facebook.com/profile.php?id=61580692061358" target="_blank"><img src="assets/icon/facebook_icon.png" class="icon-contact"/></a>
