visual fixes for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p>
                 EduTechSmart provides Gamified Healthcare Education for companies in personal assistance, home services, senior housing and LSS accommodations.
             </p>
-            <img src="assets/images/gamify.jpg"  class="featured-image">
+            <img src="assets/images/tablet_educatesmart-1024x683.png"  class="featured-image">
         </div>
 
 
